--- a/City-Level-DataScraping+FinalVisualizationCode.ipynb
+++ b/City-Level-DataScraping+FinalVisualizationCode.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "id": "48a60e36-147a-499e-8187-b0f0dbc9c0fe",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "id": "8f1d07cc-90f6-4468-b3e0-06c5c0fa5b40",
    "metadata": {},
    "outputs": [],
@@ -162,25 +162,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 46,
    "id": "4c0979ba-50f2-45c8-9aa9-0c21243bafcd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Electronic',\n",
+       "['Alternative',\n",
+       " 'Classic Rock',\n",
+       " 'Country',\n",
+       " 'Electronic',\n",
        " 'Indie',\n",
        " 'Latin',\n",
-       " 'Rhythm and Blue',\n",
-       " 'Alternative',\n",
        " 'Metal',\n",
        " 'Pop',\n",
-       " 'Classic Rock',\n",
-       " 'Country']"
+       " 'Rhythm and Blue']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +189,8 @@
     "allgenres = set()\n",
     "for state in genres:\n",
     "    allgenres.add(state['genre'])\n",
-    "allgenres = list(allgenres)\n",
+    "allgenres = sorted(list(allgenres))\n",
+    "\n",
     "allgenres #find every genre that will need to be plotted"
    ]
   },
@@ -215,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 47,
    "id": "cdf67e49",
    "metadata": {},
    "outputs": [
@@ -230,18 +231,18 @@
     {
      "data": {
       "text/plain": [
-       "{'Electronic': '#440154',\n",
-       " 'Indie': '#472d7b',\n",
-       " 'Latin': '#3b528b',\n",
-       " 'Rhythm and Blue': '#2c728e',\n",
-       " 'Alternative': '#21918c',\n",
-       " 'Metal': '#28ae80',\n",
-       " 'Pop': '#5ec962',\n",
-       " 'Classic Rock': '#addc30',\n",
-       " 'Country': '#fde725'}"
+       "{'Alternative': '#440154',\n",
+       " 'Classic Rock': '#472d7b',\n",
+       " 'Country': '#3b528b',\n",
+       " 'Electronic': '#2c728e',\n",
+       " 'Indie': '#21918c',\n",
+       " 'Latin': '#28ae80',\n",
+       " 'Metal': '#5ec962',\n",
+       " 'Pop': '#addc30',\n",
+       " 'Rhythm and Blue': '#fde725'}"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 34,
    "id": "fd64fed3-f403-4a61-882a-1092c4863d03",
    "metadata": {},
    "outputs": [],
@@ -287,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 35,
    "id": "d2103fe4-6ba0-4efc-8979-5bc8462043fc",
    "metadata": {},
    "outputs": [],
@@ -302,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 36,
    "id": "f52b051d-ea02-4631-860e-c2c831143473",
    "metadata": {},
    "outputs": [],
@@ -317,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 37,
    "id": "5093089c-6ee6-4503-ac17-ee0de09a68e1",
    "metadata": {},
    "outputs": [],
@@ -336,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 38,
    "id": "e30ce7d1-ca82-4bce-9f61-06efa4765de6",
    "metadata": {},
    "outputs": [],
@@ -347,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 39,
    "id": "80d9dae9-b8a0-45b4-ae4a-3a7c2ba5ef66",
    "metadata": {},
    "outputs": [],
@@ -358,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 40,
    "id": "1711c1cb-34d3-429f-94e7-3bf3bff3cb3c",
    "metadata": {},
    "outputs": [],
@@ -371,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 41,
    "id": "1829fa22-64f7-4101-ad98-eba95a1acd74",
    "metadata": {},
    "outputs": [],
@@ -383,17 +384,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 48,
    "id": "f129bfb2-8ad9-4471-b43a-4dced49620de",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<folium.raster_layers.TileLayer at 0x220bf094f10>"
+       "<folium.raster_layers.TileLayer at 0x220c42cd8a0>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,17 +413,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 49,
    "id": "5a7e24cb-678b-499c-8793-8b3d4515ad94",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<branca.element.Element at 0x220befcefe0>"
+       "<branca.element.Element at 0x220c42cff10>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,19 +460,19 @@
     "    padding: 10px;\n",
     "\">\n",
     "    <b style=\"font-size: 20px;\">LEGEND</b><br>\n",
-    "    <div style=\"background-color: #ffffff; padding: 10px;\">\n",
-    "        <i style=\"background: #440154; width: 18px; height: 18px; display: inline-block;\"></i> Rhythm and Blue<br>\n",
-    "        <i style=\"background: #472d7b; width: 18px; height: 18px; display: inline-block;\"></i> Pop<br>\n",
+    "    <div style=\"background-color: #ffffff; padding: 10px;\"> \n",
+    "        <i style=\"background: #440154; width: 18px; height: 18px; display: inline-block;\"></i> Alternative<br>\n",
+    "        <i style=\"background: #472d7b; width: 18px; height: 18px; display: inline-block;\"></i> Classic Rock<br>\n",
     "        <i style=\"background: #3b528b; width: 18px; height: 18px; display: inline-block;\"></i> Country<br>\n",
-    "        <i style=\"background: #2c728e; width: 18px; height: 18px; display: inline-block;\"></i> Latin<br>\n",
-    "        <i style=\"background: #21918c; width: 18px; height: 18px; display: inline-block;\"></i> Metal<br>\n",
-    "        <i style=\"background: #28ae80; width: 18px; height: 18px; display: inline-block;\"></i> Electronic<br>\n",
-    "        <i style=\"background: #5ec962; width: 18px; height: 18px; display: inline-block;\"></i> Indie<br>\n",
-    "        <i style=\"background: #addc30; width: 18px; height: 18px; display: inline-block;\"></i> Classic Rock<br>\n",
-    "        <i style=\"background: #fde725; width: 18px; height: 18px; display: inline-block;\"></i> Alternative<br>\n",
+    "        <i style=\"background: #2c728e; width: 18px; height: 18px; display: inline-block;\"></i> Electronic<br>\n",
+    "        <i style=\"background: #21918c; width: 18px; height: 18px; display: inline-block;\"></i> Indie<br>\n",
+    "        <i style=\"background: #28ae80; width: 18px; height: 18px; display: inline-block;\"></i> Latin<br>\n",
+    "        <i style=\"background: #5ec962; width: 18px; height: 18px; display: inline-block;\"></i> Metal<br>\n",
+    "        <i style=\"background: #addc30; width: 18px; height: 18px; display: inline-block;\"></i> Pop<br>\n",
+    "        <i style=\"background: #fde725; width: 18px; height: 18px; display: inline-block;\"></i> Rhythm and Blue<br>\n",
     "    </div>\n",
     "</div>\n",
-    "\"\"\" #legend for state genre colors\n",
+    "\"\"\" #legend for state genre colors; \n",
     "folium.GeoJson(\n",
     "    boundaries,\n",
     "    name='Genres',\n",
@@ -512,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 50,
    "id": "212fdf1a-07bc-4b2a-a1db-aa2d26e2f503",
    "metadata": {},
    "outputs": [],
@@ -535,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 51,
    "id": "97277fba-beb9-44ec-8191-c21df8f45684",
    "metadata": {},
    "outputs": [],
