--- a/API/Chartmetric_API.ipynb
+++ b/API/Chartmetric_API.ipynb
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,13 +278,13 @@
     "]\n",
     "top_50_cities_provinces[1] # Example info for  Los Angeles\n",
     "\n",
-    "with open('top_50_cities_provinces.pkl', 'wb') as file:\n",
+    "with open('top_50_cities_provinces.pkl', 'wb') as file: # moved to Data Folder\n",
     "    pickle.dump(top_50_cities_provinces, file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +295,7 @@
     "    {'city_name': city['city_name'], 'state': city['province'], 'latitude': city['latitude'], 'longitude': city['longitude']}\n",
     "    for city in top_50_cities\n",
     "]\n",
-    "with open('top_50_cities_location.pkl', 'wb') as file:\n",
+    "with open('top_50_cities_location.pkl', 'wb') as file: # moved to Data Folder\n",
     "    pickle.dump(top_50_cities_location, file)"
    ]
   },
@@ -515,16 +515,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# ttps://docs.python.org/3/library/pickle.html\n",
-    "# to access in Genre_By_State&Selenium.ipynb\n",
+    "# accessed in Genre_By_State&Selenium.ipynb\n",
     "\n",
     "import pickle\n",
     "\n",
-    "with open('top_10_artists.pkl', 'wb') as f:\n",
+    "with open('top_10_artists.pkl', 'wb') as f: # moved to Data Folder\n",
     "    pickle.dump(top_10_artists, f)"
    ]
   },
