--- a/Data_Scraping/Genre_By_State&Selenium.ipynb
+++ b/Data_Scraping/Genre_By_State&Selenium.ipynb
@@ -635,14 +635,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# For Use in State-Level Aggregation\n",
     "import pickle\n",
     "\n",
-    "with open('genre_state.pkl', 'wb') as f:\n",
+    "with open('genre_state.pkl', 'wb') as f: # moved to Data Folder\n",
     "    pickle.dump(genre_by_state, f)"
    ]
   },
@@ -865,9 +865,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File loaded successfully\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -883,17 +890,26 @@
        " 'GloRilla']"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import pickle\n",
+    "import os\n",
     "\n",
-    "with open('top_10_artists.pkl', 'rb') as f: # serialized format\n",
+    "# Define the relative path to the file\n",
+    "relative_path = '../Data/top_10_artists.pkl'\n",
+    "\n",
+    "# Get the absolute path based on the current working directory\n",
+    "file_path = os.path.abspath(relative_path)\n",
+    "\n",
+    "\n",
+    "with open(file_path, 'rb') as f:\n",
     "    top_10_artists = pickle.load(f)\n",
-    "    \n",
+    "    print(\"File loaded successfully\")\n",
+    "\n",
     "top_10_artists"
    ]
   },
